pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - name: main-container
    image: nginx:latest
  - name: sidecar-logger
    image: busybox:latest
    command: ["/bin/sh", "-c", "while true; do echo 'Logging data...'; sleep 10; done"]
