service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  type: LoadBalancer
  selector:
    tier: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
