service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynodeport
spec:
  type: NodePort
  selector:
    tier: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
